Updated for Alphanet
