# spec/transaction-api-spec.yaml
@@ -33,14 +33,14 @@ components:
       required:
         - transaction_version
         - network_id
-        - manifest_output_format
+        - manifest_instructions_output_format
         - manifest
       properties:
         transaction_version:
           $ref: "#/components/schemas/Byte"
         network_id:
           $ref: "#/components/schemas/Byte"
-        manifest_output_format:
+        manifest_instructions_output_format:
           $ref: "#/components/schemas/ManifestKind"
         manifest:
           $ref: "#/components/schemas/Manifest"
@@ -68,9 +68,9 @@ components:
         - type: object
           additionalProperties: false
           required:
-            - manifest_output_format
+            - manifest_instructions_output_format
           properties:
-            manifest_output_format:
+            manifest_instructions_output_format:
               $ref: "#/components/schemas/ManifestKind"
     
     DecompileTransactionIntentResponse:
@@ -96,9 +96,9 @@ components:
         - type: object
           additionalProperties: false
           required:
-            - manifest_output_format
+            - manifest_instructions_output_format
           properties:
-            manifest_output_format:
+            manifest_instructions_output_format:
               $ref: "#/components/schemas/ManifestKind"
     
     DecompileSignedTransactionIntentResponse:
@@ -124,9 +124,9 @@ components:
         - type: object
           additionalProperties: false
           required:
-            - manifest_output_format
+            - manifest_instructions_output_format
           properties:
-            manifest_output_format:
+            manifest_instructions_output_format:
               $ref: "#/components/schemas/ManifestKind"
     
     DecompileNotarizedTransactionIntentResponse:
@@ -137,10 +137,10 @@ components:
       type: object
       additionalProperties: false
       required:
-        - manifest_output_format
+        - manifest_instructions_output_format
         - compiled_unknown_intent
       properties:
-        manifest_output_format:
+        manifest_instructions_output_format:
           $ref: "#/components/schemas/ManifestKind"
         compiled_unknown_intent:
           type: string
