# src/models/decompile_notarized_transaction_intent_request.rs
@@ -1,19 +1,17 @@
-use crate::models::manifest::ManifestKind;
+use crate::models::manifest::ManifestInstructionsKind;
 use crate::models::serde::SignedTransactionIntent;
+use radix_engine::types::Signature;
 use serde::{Deserialize, Serialize};
-use serde_with::{serde_as, DisplayFromStr};
 
 #[derive(Serialize, Deserialize, Clone)]
 pub struct DecompileNotarizedTransactionIntentRequest {
-    pub manifest_output_format: ManifestKind,
+    pub manifest_instructions_output_format: ManifestInstructionsKind,
     #[serde(with = "hex::serde")]
     pub compiled_notarized_intent: Vec<u8>,
 }
 
-#[serde_as]
 #[derive(Serialize, Deserialize, Clone)]
 pub struct DecompileNotarizedTransactionIntentResponse {
     pub signed_intent: SignedTransactionIntent,
-    #[serde_as(as = "DisplayFromStr")]
-    pub notary_signature: scrypto::prelude::EcdsaSignature,
+    pub notary_signature: Signature,
 }
