# src/models/decompile_signed_transaction_intent_request.rs
@@ -1,10 +1,10 @@
-use crate::models::manifest::ManifestKind;
+use crate::models::manifest::ManifestInstructionsKind;
 use crate::models::serde::SignedTransactionIntent;
 use serde::{Deserialize, Serialize};
 
 #[derive(Serialize, Deserialize, Clone)]
 pub struct DecompileSignedTransactionIntentRequest {
-    pub manifest_output_format: ManifestKind,
+    pub manifest_instructions_output_format: ManifestInstructionsKind,
 
     #[serde(with = "hex::serde")]
     pub compiled_signed_intent: Vec<u8>,
